--- a/hwSem6/style.css
+++ b/hwSem6/style.css
@@ -2,37 +2,107 @@
     text-decoration: none;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .top {
-    margin-left: 373px;
+        background: #ffffff;
+        position: relative;
+        
 }
 
 .header__logo {
     padding-top: 40px;
-    padding-right: 337px;
+    padding-left: 375px;
     margin-bottom: 89px;
+    display: flex;
+    align-items: center;
 }
-
+a {
+    color: black;
+    
+}
+.links {
+    padding-right: 20px;
+}
+.orange {
+    color: #F25822;
+}
 .header__links {
-    padding-left: 551px;
-    padding-left: 212px;
-}
+    font-size: 14px;
+    line-height: 16px;
+    margin-left: 400px;
+    margin-right: 375px;
+   }
 
 .top__content {
     margin-bottom: 15px;
     margin-right: 27px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .title {
     padding-right: 26px;
+    font-size: 60px;
+    line-height: 70px;
+    color: #000000;
+    margin-left: 373px;
+    justify-content: start;
+    width: 522px;
+    height: 222px;
+    
+    
 }
  .text {
     margin-top: 17px;
     margin-bottom: 37px;
+    margin-left: 373px;
+    margin-right: 97px;
+    font-size: 20px;
+    line-height: 23px;
+    color: #888888;
+    justify-content: start;
+    width: 466px;
+    height: 48px;
 }
 
+.buttons {
+    margin-left: 373px;
+    margin-right: 259px;
+       
+}
+
+.button1 {
+    width: 140px;
+    height: 50px;
+    background: #F25822;
+    box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.2);
+    border-radius: 50px;
+    margin-right: 72px; 
+}
+
+.button2 {
+    font-size: 15px;
+    line-height: 18px;
+    color: #AAAAAA;
+}
+.top_image {
+    width: 545px;
+    height: 375px;  
+    margin-left: 936px;
+    margin-right: 440px;
+    position: absolute; 
+}
 .top__logos {
     margin-top: 259px;
-    padding-bottom: 96px;
+    padding-bottom: 96px; 
+    margin-left: 345px;
+    margin-right: 375px;  
+}
+
+.img_logo {
+    width: 130px;
+    height: 40px;
+    padding-right: 48px;
 }
