--- a/seminar6/style.css
+++ b/seminar6/style.css
@@ -1,10 +1,10 @@
 * {
-    background-color: blue;
     margin: 0;
     padding: 0;
 }
 .top {
     padding-bottom: 99px;
+    background: #020A18;
 }
 a {
     text-decoration: none;
@@ -13,7 +13,15 @@ a {
 .header {
     padding-top: 39px;
     padding-bottom: 39px;
+    }
+.header__link {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
 }
+    
 .top__content {
     margin-top: 160px;
     margin-bottom: 197px ;
@@ -21,12 +29,35 @@ a {
 
 .title {
     margin-bottom: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 160%;
+    text-transform: uppercase;
+    color: #3A68B8;
 }
 
 .sub__title {
     margin-bottom: 40px;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 55px;
+    line-height: 130%;
+    color: #FFFFFF;
+}
+
+.text {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 160%;
+    color: #FFFFFF;
 }
 
 .top_buttons {
     margin-top: 50px;
+    }
+
+.button {
+    background: #3A68B8;
 }
