--- a/hwsem11/style.css
+++ b/hwsem11/style.css
@@ -144,6 +144,43 @@ color: #9F9F9F;
     max-width: 360px;
 }
 
+.product_img {
+}
+
+.hover_img {
+    display: block;
+    position: relative;
+}
+
+.hover_img:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url("img/Hover_img.svg") no-repeat center center;
+    opacity: 0;
+    z-index: 1;
+    transition: opacity 0.4s ease;
+}
+
+.hover_img:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, .8);
+    opacity: 0;
+    transition: opacity 0.4s linear;
+}
+.hover_img:hover:before,
+.hover_img:hover:after {
+    opacity: .8;
+}
+
 .title_price {
     padding-left: 16px;
     padding-bottom: 19px;
@@ -190,10 +227,7 @@ color: #9F9F9F;
     width: 211px;
     height: 47px;
     margin-top: 42px;
-    margin-bottom: 61px;
-}
-
-.button_text {
+    margin-bottom: 95px;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -201,6 +235,181 @@ color: #9F9F9F;
 
     color: #F26376;
 }
+
+.information_block {
+    background: #222224;
+    display: grid;
+    grid-template-columns: repeat(3, 360px);
+    justify-content: center;
+    gap: 30px;
+    padding-top: 103px;
+    padding-bottom: 104px;
+    text-align: center;
+}
+
+.info_item {  
+    display: grid;
+    justify-items: center;
+}
+
+.subtitle {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FBFBFB;
+    padding-top: 25px;
+    padding-bottom: 16px;
+}
+
+.info_text {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #5D5D5D;
+}
+
+.subscribe_block {
+    background-image: url(img/background_img.svg);
+    background-size: 100%;
+    display: grid;
+    grid-template-columns: 359px 557px;
+    gap: 222px;
+    padding-top: 86px;
+    padding-bottom: 126px;
+    padding-left: 230px;
+    padding-right: 230px;
+    justify-content: center;
+    align-items: center;
+}
+
+.left_block {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+}
+.left_img {
+    padding-bottom: 30px;
+}
+
+.comment {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+
+    color: #222224;
+}
+
+.right_block {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+}
+
+.subscribe_discription {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 167.2%;
+    /* or 40px */
+    text-align: center;
+    color: #222224;
+    padding-bottom: 32px;
+}
+.sub_disc {
+    font-weight: 700;
+    font-size: 24px;
+}
+.discription_form {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.e-mail {
+    
+    width: 256px;
+    height: 49px;
+    background: #E1E1E1;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 22px;    
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+
+    color: #222224;
+}
+
+.sub_button {
+    background: #F16D7F;
+    
+    width: 100px;
+    height: 49px;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    border-width: .1px;
+
+
+}
+
+.footer {
+    background: #222224;
+    display: grid;
+    grid-template-columns: 332px 147px;
+    gap: 635px;
+    padding-left: 235px;
+    padding-right: 230px;
+}
+
+
+.all_rights {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #FBFBFB;
+    
+
+}
+
+.social_media {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    text-decoration: none;
+}
+
+.social_link:hover .bkgrnd {
+    fill: #F16D7F;
+}
+
+.social_link:hover path {
+     fill: white;
+}
+
+
 
 @media (max-width: 1024px) {
     .header_logo {
@@ -267,6 +476,23 @@ color: #9F9F9F;
         max-width: 768px;
         padding-left: 16px;
         padding-right: 16px;
+    }
+
+    .information_block {
+        grid-template-columns: repeat(1, 360px);
+    }
+
+    .subscribe_block {
+        grid-template-columns: 359px;
+        background-size: cover;
+    }
+    
+    .footer {
+        grid-template-columns: 352px 147px;
+        gap: 200px;
+        padding-left: 32px;
+        padding-right: 32px;
+        justify-content: space-between;
     }
 }
 
@@ -341,6 +567,27 @@ color: #9F9F9F;
     font-size: 16px;
     line-height: 19px;
   }
+
+  .subscribe_block {
+    padding-left: 16px;
+    padding-right: 16px;
+    grid-template-columns: 343px;
+  }
+
+  .discription_form {
+    width: 343px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column-reverse;
+    align-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 40px;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
   
 }
 
@@ -377,5 +624,17 @@ color: #9F9F9F;
     }
     .product_img {
         width: 304px;
+    }
+
+    .information_block {
+        grid-template-columns: repeat(1, 310px);
+    }
+
+    .subscribe_block {
+        grid-template-columns: 310px;
+    }
+
+    .discription_form {
+        width: 300px;
     }
 }
