--- a/hwsem11/style.css
+++ b/hwsem11/style.css
@@ -159,22 +159,32 @@ color: #9F9F9F;
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("img/Hover_img.svg") no-repeat center center;
+    background: url("img/darktheme.svg") no-repeat center center;
     opacity: 0;
-    z-index: 1;
+    z-index: 0;
     transition: opacity 0.4s ease;
 }
 
 .hover_img:after {
-    content: '';
+    content:  'Add to Cart';
     position: absolute;
-    top: 0;
-    left: 0;
+    padding-left: 20px;
+    top: 40%;
+    left: 33%;
+    width: 110px;
+    height: 33px;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .8);
+    background: url("img/header_button_3.svg") no-repeat;
     opacity: 0;
     transition: opacity 0.4s linear;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    
 }
 .hover_img:hover:before,
 .hover_img:hover:after {
